--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -24,5 +24,6 @@ email.from=no-reply@ecommerce.com
 app.frontend.url=http://ecommerce.com
 
 # SMTP configuration
-spring.mail.host=localhost
-spring.mail.port=25
+spring.mail.host=smtp-service
+spring.mail.port=1025
+spring.mail.protocol=smtp
