--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -18,7 +18,7 @@ jwt.issuer=eCommerce
 jwt.expiryInSeconds=604800
 
 # Email configuration
-email.from=no-reply@ecommerce.com
+email.from=maxim7012@gmail.com
 
 # General configuration
 app.frontend.url=http://ecommerce.com
@@ -27,3 +27,5 @@ app.frontend.url=http://ecommerce.com
 spring.mail.host=smtp-service
 spring.mail.port=1025
 spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
