--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -18,13 +18,13 @@ jwt.issuer=eCommerce
 jwt.expiryInSeconds=604800
 
 # Email configuration
-email.from=maxim7012@gmail.com
+email.from=mailer7012@gmail.com
 
 # General configuration
 app.frontend.url=http://ecommerce.com
 
 # SMTP configuration
-spring.mail.host=smtp-service
+spring.mail.host=localhost
 spring.mail.port=1025
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=false
