--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -21,7 +21,7 @@ jwt.expiryInSeconds=604800
 email.from=mailer7012@gmail.com
 
 # General configuration
-app.frontend.url=http://localhost:3000
+app.frontend.url=https://ecommerce.baxic.ru
 
 # SMTP configuration
 spring.mail.host=smtp-service
