--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -24,8 +24,12 @@ email.from=mailer7012@gmail.com
 app.frontend.url=https://ecommerce.baxic.ru
 
 # SMTP configuration
-spring.mail.host=smtp-service
-spring.mail.port=1025
-spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.auth=false
-spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mailer7012@gmail.com
+spring.mail.password=kjth nnei uekm wkak
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
