--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -24,12 +24,15 @@ email.from=mailer7012@gmail.com
 app.frontend.url=https://ecommerce.baxic.ru
 
 # SMTP configuration
+# Альтернатива для порта 465
 spring.mail.host=smtp.gmail.com
-spring.mail.port=587
+spring.mail.port=465
 spring.mail.username=mailer7012@gmail.com
 spring.mail.password=kjth nnei uekm wkak
+spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback=false
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
-spring.mail.properties.mail.smtp.writetimeout=5000
