--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -17,14 +17,14 @@ jwt.algorithm.key=SuperSecureSecretKey
 jwt.issuer=eCommerce
 jwt.expiryInSeconds=604800
 
-# Email configuration
-email.from=mailer7012@gmail.com
-
 # General configuration
 app.frontend.url=https://ecommerce.baxic.ru
 
+logging.level.org.springframework.mail=DEBUG
+logging.level.com.sun.mail=DEBUG
+logging.level.org.springframework.context.support=DEBUG
+
 # SMTP configuration
-# Альтернатива для порта 465
 spring.mail.host=smtp.gmail.com
 spring.mail.port=465
 spring.mail.username=mailer7012@gmail.com
