--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -17,6 +17,9 @@ jwt.algorithm.key=SuperSecureSecretKey
 jwt.issuer=eCommerce
 jwt.expiryInSeconds=604800
 
+# Email configuration
+email.from=mailer7012@gmail.com
+
 # General configuration
 app.frontend.url=https://ecommerce.baxic.ru
 
