--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -23,19 +23,9 @@ email.from=mailer7012@gmail.com
 # General configuration
 app.frontend.url=https://ecommerce.baxic.ru
 
-logging.level.org.springframework.mail=DEBUG
-logging.level.com.sun.mail=DEBUG
-logging.level.org.springframework.context.support=DEBUG
-
 # SMTP configuration
-spring.mail.host=smtp.gmail.com
-spring.mail.port=465
-spring.mail.username=mailer7012@gmail.com
-spring.mail.password=kjth nnei uekm wkak
-spring.mail.protocol=smtps
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.socketFactory.port=465
-spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback=false
-spring.mail.properties.mail.smtp.connectiontimeout=5000
-spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.host=smtp-service
+spring.mail.port=1025
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
