--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,18 +30,19 @@ services:
 
   # Добавляем новый сервис для отправки почты
   smtp-service:
-    image: maildev/maildev  # Или image: changemakerstudiosus/papercut-smtp:latest для Papercut
+    image: maildev/maildev
     container_name: smtp-service
     restart: unless-stopped
     command:
       --outgoing-host smtp.gmail.com
+      --outgoing-port 587
       --outgoing-secure
       --outgoing-user mailer7012@gmail.com
       --outgoing-pass "kjth nnei uekm wkak"
       --auto-relay
     ports:
-      - "8180:1080"   # Веб-интерфейс для просмотра писем
-      - "25:1025"     # Порт для SMTP
+      - "8180:1080"   # Веб-интерфейс
+      # 🔥 УБЕРИТЕ маппирование порта 25:1025 - он не нужен для исходящей почты!
     networks:
       - ecomerce_net
 
