--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,9 @@ services:
     restart: unless-stopped
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      # Настройки для подключения к SMTP-серверу
+      - SPRING_MAIL_HOST=smtp-service  # Имя сервиса из docker-compose
+      - SPRING_MAIL_PORT=1025
       # Аутентификация не требуется
     volumes:
       - ./src:/app/src
@@ -32,9 +35,15 @@ services:
     restart: unless-stopped
     environment:
       - NODE_OPTIONS=--no-warnings=DeprecationWarning
+    command:
+      --outgoing-host smtp.gmail.com
+      --outgoing-port 465
+      --outgoing-secure
+      --outgoing-user mailer7012@gmail.com
+      --outgoing-pass "kjth nnei uekm wkak"
+      --auto-relay
     ports:
-      - "8180:1080"   # Веб-интерфейс
-      # 🔥 УБЕРИТЕ маппирование порта 25:1025 - он не нужен для исходящей почты!
+      - "8180:1080"
     networks:
       - ecomerce_net
 
