--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       --outgoing-port 465
       --outgoing-secure
       --outgoing-user mailer7012@gmail.com
-      --outgoing-pass "kjth nnei uekm wkak"
+      --outgoing-pass "${SMTP_PASSWORD}"
       --auto-relay
     ports:
       - "8180:1080"
