--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -24,8 +24,8 @@ email.from=mailer7012@gmail.com
 app.frontend.url=https://ecommerce.baxic.ru
 
 # SMTP configuration
-spring.mail.host=smtp-service
-spring.mail.port=1025
-spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.auth=false
-spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.host=smtp.yandex.ru
+spring.mail.username=maxim9012@yandex.ru
+spring.mail.password=xapldvfcgltvpsvm
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
