--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -25,7 +25,7 @@ app.frontend.url=https://ecommerce.baxic.ru
 
 # SMTP configuration
 spring.mail.host=smtp.yandex.ru
-spring.mail.username=maxim9012@yandex.ru
-spring.mail.password=xapldvfcgltvpsvm
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.port=1025
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
