--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,11 +38,11 @@ services:
     env_file:
       - ./server/.env
     command:
-      --outgoing-host smtp.yandex.ru
+      --outgoing-host smtp.gmail.com
       --outgoing-port 465
       --outgoing-secure
-      --outgoing-user maxim9012@yandex.ru
-      --outgoing-pass xapldvfcgltvpsvm
+      --outgoing-user mailer7012@gmail.com
+      --outgoing-pass "${SMTP_PASSWORD}"
       --auto-relay
     ports:
       - "8180:1080"
