--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     restart: unless-stopped
     environment:
       - NODE_OPTIONS=--no-warnings=DeprecationWarning
+      - DEBUG=maildev*
     env_file:
       - ./server/.env
     command:
@@ -44,6 +45,7 @@ services:
       --outgoing-user mailer7012@gmail.com
       --outgoing-pass "${SMTP_PASSWORD}"
       --auto-relay
+      --verbose
     ports:
       - "8180:1080"
     networks:
