--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
       --outgoing-port 465
       --outgoing-secure
       --outgoing-user mailer7012@gmail.com
-      --outgoing-pass "${SMTP_PASSWORD}"
+      --outgoing-pass "ttwz eocs yvvk moay"
       --auto-relay
       --verbose
     ports:
