--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -24,7 +24,7 @@ email.from=mailer7012@gmail.com
 app.frontend.url=https://ecommerce.baxic.ru
 
 # SMTP configuration
-spring.mail.host=smtp.yandex.ru
+spring.mail.host=smtp-service
 spring.mail.port=1025
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=false
