--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -12,6 +12,10 @@ spring.jpa.hibernate.ddl-auto=update
 # Encryption configuration
 encryption.salt.rounds=10
 
+# Yokassa
+yookassa.shop.id=1189819
+yookassa.secret.key=test_Yhk3aY1GixLG1XoLhYghsbkpfekIsFyqR0ClxgOvU8k
+
 # JWT configuration
 jwt.algorithm.key=SuperSecureSecretKey
 jwt.issuer=eCommerce
