--- a/server/pom.xml
+++ b/server/pom.xml
@@ -23,6 +23,11 @@
     		<scope>runtime</scope>
 		</dependency>
 		<dependency>
+    		<groupId>ru.loolzaaa</groupId>
+    		<artifactId>youkassa-sdk-java</artifactId>
+    		<version>0.1.0</version>
+		</dependency>
+		<dependency>
     		<groupId>org.projectlombok</groupId>
     		<artifactId>lombok</artifactId>
     		<optional>true</optional>
