--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 management.endpoints.jmx.exposure.include=*
 
 # Database connection & configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://ep-round-paper-091468-pooler.us-east-2.aws.neon.tech:5432/ECommerce
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=gaTResKPJX25
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
