--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.datasource.username=postgres
 spring.datasource.password=gaTResKPJX25
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+app.upload.dir=src/main/resources/static/images
+app.upload.web-path=/images/
+
 spring.jpa.hibernate.ddl-auto=update
 
 # Encryption configuration
