--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 app.upload.dir=src/main/resources/static/images
 app.upload.web-path=/images/
+app.upload.dir.override=/app/uploads/images
 
 spring.jpa.hibernate.ddl-auto=update
 
