--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,9 +7,8 @@ spring.datasource.username=postgres
 spring.datasource.password=gaTResKPJX25
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-app.upload.dir=src/main/resources/static/images
+app.upload.dir=/app/uploads/images
 app.upload.web-path=/images/
-app.upload.dir.override=/app/uploads/images
 
 spring.jpa.hibernate.ddl-auto=update
 
