--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=postgres
 spring.datasource.password=gaTResKPJX25
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-app.upload.dir=/uploads/images
+app.upload.dir=./uploads/images
 app.upload.web-path=/images/
 
 spring.jpa.hibernate.ddl-auto=update
