--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 management.endpoints.jmx.exposure.include=*
 
 # Database connection & configuration
-spring.datasource.url=jdbc:postgresql://ep-round-paper-091468-pooler.us-east-2.aws.neon.tech:5432/postgres
+spring.datasource.url=jdbc:postgresql://ep-round-paper-091468-pooler.us-east-2.aws.neon.tech:5432/ECommerce
 spring.datasource.username=postgres
 spring.datasource.password=gaTResKPJX25
 spring.datasource.driver-class-name=org.postgresql.Driver
