--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     volumes:
       - ./src:/app/src
       - ./pom.xml:/app/pom.xml
-      - uploads_volume:/app/uploads
+      - uploads_volume:/tmp/uploads/images
     networks:
       - ecomerce_net
     depends_on:
