--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     ports:
       - "5654:8080"
     restart: unless-stopped
+    user: root
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       # Настройки для подключения к SMTP-серверу
@@ -21,6 +22,13 @@ services:
       - SPRING_MAIL_PORT=1025
       - UPLOAD_DIR=/app/uploads/images
       # Аутентификация не требуется
+    entrypoint: >
+      sh -c "
+        mkdir -p /app/uploads/images &&
+        chown -R 1000:1000 /app/uploads &&
+        chmod -R 755 /app/uploads &&
+        java -jar /app/app.jar
+      "
     volumes:
       - ./src:/app/src
       - ./pom.xml:/app/pom.xml
