--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,27 +7,19 @@ RUN mvn clean package -DskipTests
 
 # Финальная стадия
 FROM alpine:3.20
-RUN apk add --no-cache openjdk17-jdk bash
+RUN apk add --no-cache openjdk17-jdk bash su-exec
 
 WORKDIR /app
 
 # Копируем JAR из стадии сборки
 COPY --from=builder /app/target/*.jar app.jar
 
-# ПРАВИЛЬНЫЙ ПОРЯДОК:
-# 1. Создаем пользователя
-RUN addgroup -S spring && adduser -S spring -G spring
-
-# 2. Создаем директорию
-RUN mkdir -p /app/uploads/images
-
-# 3. Даем права пользователю spring
+# Создаем пользователя spring с UID 1000
 RUN addgroup -g 1000 spring && \
     adduser -D -u 1000 -G spring spring && \
     chown spring:spring /app
 
-# 4. Переключаемся на пользователя spring
-USER spring:spring
-
 EXPOSE 8080
+
+# Entrypoint будет переопределен в docker-compose
 ENTRYPOINT ["java", "-jar", "app.jar"]
