--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,24 +14,29 @@ services:
     ports:
       - "5654:8080"
     restart: unless-stopped
+    user: root
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-      - SPRING_MAIL_HOST=smtp-service
+      # Настройки для подключения к SMTP-серверу
+      - SPRING_MAIL_HOST=smtp-service  # Имя сервиса из docker-compose
       - SPRING_MAIL_PORT=1025
       - UPLOAD_DIR=/app/uploads/images
+      # Аутентификация не требуется
     entrypoint: >
       sh -c "
         mkdir -p /app/uploads/images &&
         chown -R 1000:1000 /app/uploads &&
-        chmod -R 755 /app/uploads &&
-        su-exec 1000:1000 java -jar /app/app.jar
+        chmod -R 777 /app/uploads &&
+        java -jar /app/app.jar
       "
     volumes:
-      - uploads_volume:/app/uploads
+      - ./src:/app/src
+      - ./pom.xml:/app/pom.xml
+      - uploads_volume:/app/uploads/images
     networks:
       - ecomerce_net
     depends_on:
-      - smtp-service
+      - smtp-service  # Указываем зависимость от SMTP-сервиса
 
   # Добавляем новый сервис для отправки почты
   smtp-service:
