--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.jpa.hibernate.ddl-auto=update
 # Encryption configuration
 encryption.salt.rounds=10
 
+yandex.delivery.api.token=y0__xC2rpTGCBix9BwgzoivqRXkYgF9ZL3hdTfFQVRtDHLDr_hIqQ
+yandex.delivery.api.url=https://b2b.taxi.yandex.net
+
 # Yokassa
 yookassa.shop.id=1189819
 yookassa.secret.key=test_Yhk3aY1GixLG1XoLhYghsbkpfekIsFyqR0ClxgOvU8k
