--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.hibernate.ddl-auto=update
 encryption.salt.rounds=10
 
 yandex.delivery.api.token=y0__xC2rpTGCBix9BwgzoivqRXkYgF9ZL3hdTfFQVRtDHLDr_hIqQ
-yandex.delivery.api.url=https://b2b.taxi.yandex.net
+yandex.delivery.api.url=https://b2b.taxi.tst.yandex.net
 
 # Yokassa
 yookassa.shop.id=1189819
