--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -16,7 +16,8 @@ spring.jpa.hibernate.ddl-auto=update
 encryption.salt.rounds=10
 
 yandex.delivery.api.token=y0__xC2rpTGCBix9BwgzoivqRXkYgF9ZL3hdTfFQVRtDHLDr_hIqQ
-yandex.delivery.api.url=https://b2b.taxi.tst.yandex.net
+yandex.delivery.api.url=https://b2b.taxi.yandex.net
+yandex.delivery.apu.platform_id=fbed3aa1-2cc6-4370-ab4d-59c5cc9bb924
 
 # Yokassa
 yookassa.shop.id=1189819
