--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,6 +7,16 @@ spring.datasource.username=postgres
 spring.datasource.password=gaTResKPJX25
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+springdoc.api-docs.path=/v3/api-docs
+springdoc.api-docs.enabled=true
+
+spring.mvc.throw-exception-if-no-handler-found=false
+spring.web.resources.add-mappings=true
+
+springdoc.swagger-ui.path=/api-docs
+springdoc.swagger-ui.url=/v3/api-docs
+springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
+
 app.upload.dir=${UPLOAD_DIR:/app/uploads/images}
 app.upload.web-path=/images/
 
