--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -7,12 +7,15 @@ spring.datasource.username=postgres
 spring.datasource.password=gaTResKPJX25
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+swagger.server.url=http://localhost:8080
+
 springdoc.api-docs.path=/v3/api-docs
 springdoc.api-docs.enabled=true
 
 spring.mvc.throw-exception-if-no-handler-found=false
 spring.web.resources.add-mappings=true
 
+springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/api-docs
 springdoc.swagger-ui.url=/v3/api-docs
 springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
