--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -41,6 +41,10 @@ jwt.algorithm.key=SuperSecureSecretKey
 jwt.issuer=eCommerce
 jwt.expiryInSeconds=604800
 
+yandex.storage.access-key=YCAJErYpevroGZGMHipAV0jlK
+yandex.storage.secret-key=YCN01z00Yv6i1srHT4NNa8lBr9ybFIUgcWZ6RR9L
+yandex.storage.bucket-name=ecommerce
+
 # Email configuration
 email.from=mailer7012@gmail.com
 
