--- a/server/pom.xml
+++ b/server/pom.xml
@@ -18,6 +18,16 @@
 	</properties>
 	<dependencies>
 		<dependency>
+    		<groupId>software.amazon.awssdk</groupId>
+    		<artifactId>s3</artifactId>
+    		<version>2.20.136</version>
+		</dependency>
+		<dependency>
+    		<groupId>software.amazon.awssdk</groupId>
+    		<artifactId>apache-client</artifactId>
+    		<version>2.20.136</version>
+		</dependency>
+		<dependency>
     		<groupId>org.springdoc</groupId>
     		<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
     		<version>2.5.0</version>
