--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 REACT_APP_API_URL='https://ecommerceapi.baxic.ru'
-S3_URL='https://storage.yandexcloud.net/ecommerce'
+REACT_APP_S3_URL='https://storage.yandexcloud.net/ecommerce'
 WDS_SOCKET_PORT=0
